2019-06-20 Jan Kotanski <jan.kotanski@desy.de>
	* add file dialog for nexus source
	* tagged as 2.11.0

2019-06-19 Jan Kotanski <jan.kotanski@desy.de>
	* fix nexus source and SWMR take last flag
	* tagged as 2.10.4

2019-06-19 Jan Kotanski <jan.kotanski@desy.de>
	* fix for show/hide gradient between RGB and GREY
	* tagged as 2.10.3

2019-06-19 Jan Kotanski <jan.kotanski@desy.de>
	* fix for swtiching between RGB and GREY
	* tagged as 2.10.2

2019-06-19 Jan Kotanski <jan.kotanski@desy.de>
	* fix for setting grandient after RGB
	* tagged as 2.10.1

2019-06-18 Jan Kotanski <jan.kotanski@desy.de>
	* add RGB color channel
	* add instance option
	* tagged as 2.10.0

2019-06-14 Jan Kotanski <jan.kotanski@desy.de>
	* fix for switching off filters on an error
	* tagged as 2.9.5

2019-06-14 Jan Kotanski <jan.kotanski@desy.de>
	* add bytearray flag for TangoAttribute source
	* tagged as 2.9.4

2019-06-14 Jan Kotanski <jan.kotanski@desy.de>
	* workaround for a bug in the JPEG_RGB tango decoder
	* tagged as 2.9.3

2019-06-13 Jan Kotanski <jan.kotanski@desy.de>
	* add --filters option
	* fix manpages
	* fix adding labels
	* tagged as 2.9.2

2019-06-13 Jan Kotanski <jan.kotanski@desy.de>
	* make filter widget more visible
	* tagged as 2.9.1

2019-06-13 Jan Kotanski <jan.kotanski@desy.de>
	* add filter plugins
	* tagged as 2.9.0

2019-06-07 Jan Kotanski <jan.kotanski@desy.de>
	* fix for ZMQ sources and python3
	* fix for subtraction of unsigned images
	* tagged as 2.8.3

2019-05-15 Jan Kotanski <jan.kotanski@desy.de>
	* fix for crash on empty hidra server lineedit
	* tagged as 2.8.2

2019-05-02 Jan Kotanski <jan.kotanski@desy.de>
	* add update of icons on combobox editing finished
	* tagged as 2.8.1

2019-04-26 Jan Kotanski <jan.kotanski@desy.de>
	* add support for eiger2 and 1.8.0 API
	* tagged as 2.8.0

2019-04-25 Jan Kotanski <jan.kotanski@desy.de>
	* fix for update custom color gradient
	* tagged as 2.7.1

2019-04-25 Jan Kotanski <jan.kotanski@desy.de>